welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:8: error: '(' expected but identifier found.
    if biscuit<3
       ^Poucet:10: error: '(' expected but identifier found.
    if biscuit>=3
       ^